--- a/working_with_tensors.ipynb
+++ b/working_with_tensors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "14569b14",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 2.9.0+cu126\n",
-      "Using GPU: Tesla T4\n",
-      "Tensor: tensor([1., 2., 3.], device='cuda:0')\n",
-      "Device: cuda:0\n"
+      "PyTorch version: 2.9.1+cpu\n",
+      "No GPU found, using CPU.\n",
+      "Tensor: tensor([1., 2., 3.])\n",
+      "Device: cpu\n"
      ]
     }
    ],
@@ -538,7 +538,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".my-env",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
